--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<input type="file" id="files" size="50">
 	<div id="intro">This is a companion web app to be used with the CSV created from Android's App Usage Tracker.</div>
 	<canvas id="myChart" width="500" height="500"></canvas>
+	<canvas id="chromeChart" width="500" height="500"></canvas>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
